fixed about me section becoming squished and horrible on smaller screens. added media queries for smaller screens that resizes containers suitable for smaller screens, and shifts position to avoid becoming buried in navbar

--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,17 @@ body {
 }
 
 
+@media screen and (max-width:768px) and (min-width: 500px) {
+    .about-me {
+        position: relative; top: 20px;
+    }
+    .about-me-container {
+        max-width: 50%;
+    }
+
+    .img-container {
+        max-width: 50%;
+    }
 
 
 
